Add initial CSS
Started adding Flexbox to divide sections and stylizing some elements like the header and footer.

--- a/index.html
+++ b/index.html
@@ -9,29 +9,34 @@
 
 <body>
     <div class="header">
-        <h1>Header Logo</h1>
-        <ul>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
-
-        <h2>This website is awesome</h2>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button>Sign up</button>
-        <img src="./imgs/placeholder-1.png">
+        <div class="navbar">
+            <h1>Header Logo</h1>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+        <!-- <div class="header-text-container"> -->
+            <h2>This website is awesome</h2>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <button>Sign up</button>
+            <img src="./imgs/placeholder-1.png" alt="gray box placeholder">
+        <!-- </div> -->
     </div>
     
-    <div class="container-imgs">
+    <div class="body-images">
         <h2>Some random information.</h2>
-        <img src="./imgs/placeholder-2.png">
-        <p>this is some subtext under an illustration or image</p>
-        <img src="./imgs/placeholder-3.png">
-        <p>this is some subtext under an illustration or image</p>
-        <img src="./imgs/placeholder-4.png">
-        <p>this is some subtext under an illustration or image</p>
-        <img src="./imgs/placeholder-5.png">
-        <p>this is some subtext under an illustration or image</p>
+        <div class="container-imgs">
+            <img src="./imgs/placeholder-2.png">
+            <p>this is some subtext under an illustration or image</p>
+            <img src="./imgs/placeholder-3.png">
+            <p>this is some subtext under an illustration or image</p>
+            <img src="./imgs/placeholder-4.png">
+            <p>this is some subtext under an illustration or image</p>
+            <img src="./imgs/placeholder-5.png">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
     </div>
 
     <div class="quote">
