--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
-        <!-- <div class="header-text-container"> -->
+        <div class="header-text-container">
+        <div class="header-text">
             <h2>This website is awesome</h2>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
             <button>Sign up</button>
+        </div>
             <img src="./imgs/placeholder-1.png" alt="gray box placeholder">
-        <!-- </div> -->
+        </div>
     </div>
     
     <div class="body-images">
@@ -44,10 +46,12 @@
         <p>- Thor, God of Thunder</p>
     </div>
 
-    <div class="call-box">
+    <div class="call-box-container">
+        <div class="call-box">
         <h3>Call to action! It's time!</h3>
         <p>Sign up for our product by clicking that button right over there!</p>
         <button>Sign up</button>
+        </div>
     </div>
 
     <footer><p>Copyright © The Odin Project 2021</p></footer>
