--- a/index.html
+++ b/index.html
@@ -30,14 +30,22 @@
     <div class="body-images">
         <h2>Some random information.</h2>
         <div class="container-imgs">
-            <img src="./imgs/placeholder-2.png">
-            <p>this is some subtext under an illustration or image</p>
-            <img src="./imgs/placeholder-3.png">
-            <p>this is some subtext under an illustration or image</p>
-            <img src="./imgs/placeholder-4.png">
-            <p>this is some subtext under an illustration or image</p>
+            <div class="imgs-info">
+                <img src="./imgs/placeholder-2.png">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="imgs-info">
+                <img src="./imgs/placeholder-3.png">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="imgs-info">
+                <img src="./imgs/placeholder-4.png">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="imgs-info">
             <img src="./imgs/placeholder-5.png">
             <p>this is some subtext under an illustration or image</p>
+            </div>
         </div>
     </div>
 
