--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
 
     <div class="call-box-container">
         <div class="call-box">
-        <h3>Call to action! It's time!</h3>
-        <p>Sign up for our product by clicking that button right over there!</p>
+        <div class="call-box-text">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
         <button>Sign up</button>
         </div>
     </div>
